Desktop map tab tweaks

--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -9,6 +9,8 @@
 
     .corporate-content-inner {
         background-color: #fff;
+        padding: 1rem;
+        
         @include media-breakpoint-up(lg) {
             padding: 30px;
         }
