BS select dropdown width fix

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -154,7 +154,7 @@ select::-ms-expand {
 
 .dropdown-toggle {
     cursor: auto !important;
-    @extend .form-control;
+    //@extend .form-control;
 }
 
 .checkbox {
