--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -766,7 +766,7 @@
 
         .dropdown-menu {
             min-width: initial !important;
-            width: 100% !important;
+            max-width: 100% !important;
         }
     }
 
