--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -35,9 +35,7 @@
         // Button added by BS select
         .dropdown-toggle {
             padding: 16px 60px 16px 16px;
-            //padding: 16px 60px 16px 50px;
             width: 100%;
-            //border-radius: 10px;
             color: $textGrey;
             @include font-size(16);
             @extend .SofiaPro-Medium;
@@ -74,4 +72,9 @@
             }
         }
     }
+}
+
+// The li within the BS select dropdowns - stop the text overflowing the container
+span.text {
+    white-space: initial;
 }
