--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -27,7 +27,7 @@
 
         .col-inner {
             &__left {
-                padding: 30px;
+                padding: 0 30px 30px;
             }
 
             &__right {
@@ -113,7 +113,6 @@
 
     &#hc_modal_enquire_nhs {
         .btn-enquire {
-            padding: 0 15px 0 40px;
             line-height: 40px;
             max-width: inherit;
         }
