Telephone number validation working - desktop

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -27,16 +27,9 @@
 
         .col-inner {
             &__left {
-                padding: 0 30px 30px;
             }
 
             &__right {
-                padding: 60px 30px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                //border-radius: 0 0 16px 0;
             }
         }
     }
@@ -111,7 +104,7 @@
         }
     }
 
-    &#hc_modal_enquire_nhs {
+    &#hc_modal_enquire_general {
         .btn-enquire {
             line-height: 40px;
             max-width: inherit;
