--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -523,24 +523,24 @@
     }
 }
 
-.btn-more-info {
-
-    transition: 0.3s all ease;
-
-    svg {
-        transition: 0.1s all ease;
-    }
-
-    &.open {
-        color: $white;
-        background-color: #000 !important;
-
-        i, svg {
-            transform: translateY(-50%) rotate3d(0, 0, 1, 45deg) !important;
-
-        }
-    }
-}
+//.btn-more-info {
+//
+//    transition: 0.3s all ease;
+//
+//    svg {
+//        transition: 0.1s all ease;
+//    }
+//
+//    &.open {
+//        color: $white;
+//        background-color: #000 !important;
+//
+//        i, svg {
+//            transform: translateY(-50%) rotate3d(0, 0, 1, 45deg) !important;
+//
+//        }
+//    }
+//}
 
 // Compare buttons when compareCount = 5
 .compare {
@@ -611,12 +611,12 @@
         display: none;
     }
 
-    .btn-more-info {
-        width: 92px;
-        height: 23px;
-        line-height: 23px;
-        border-radius: 3px 3px 0 0;
-    }
+    //.btn-more-info {
+    //    width: 92px;
+    //    height: 23px;
+    //    line-height: 23px;
+    //    border-radius: 3px 3px 0 0;
+    //}
 }
 
 /********* Mobile results layout *************************************************************************************/
