--- a/resources/sass/pages/_snapResultsPage.scss
+++ b/resources/sass/pages/_snapResultsPage.scss
@@ -317,7 +317,7 @@
         max-width: 16px;
     }
 
-    .result-item .btn-enquire {
+    .results-page-desktop .result-item .btn-enquire {
         border-radius: 3px;
         padding: 15px 15px;
         font-size: 0.875rem !important;
