Fix issue with font awesome clash

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,8 +22,8 @@
 @import '~cookieconsent/build/cookieconsent.min.css';
 
 // Font-awesome
-//@import '~@fortawesome/fontawesome-free/scss/fontawesome';
-
+// Required for exit survey
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
 //MISC
 @import 'animations';
