--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -21,7 +21,7 @@
     }
 
     .understanding-choices {
-        .icon-wrapper {
+        .hc-icon-wrapper {
             width: 60px;
             height: 60px;
             margin: 0 auto;
@@ -88,7 +88,7 @@
 }
 
 .our-background {
-    .icon-wrapper {
+    .hc-icon-wrapper {
         height: 60px;
 
         img {
