--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -2,14 +2,14 @@
 .how-section__parent {
     padding: 75px 0;
 
-    .icon-title {
+    .how-icon-title {
         //@include font-style('SofiaPro-Medium', 22px, false, #000, 26px, -0.9px);
         @include font-size(22);
         @extend .SofiaPro-Medium;
         margin-bottom: 25px;
     }
 
-    .icon-description {
+    .how-icon-description {
         li,
         p {
             @extend .col-grey;
@@ -50,18 +50,18 @@
         border-radius:  $border-radius;
     }
 
-    .icon {
+    .how-icon {
         margin-bottom: 20px;
         height: 60px;
         @include icon-bg-center(100%);
         background-size: contain;
     }
 
-    .icon-step {
+    .how-icon-step {
         padding-top: 0.35rem !important;
     }
 
-    .icon-title {
+    .how-icon-title {
         @include font-size(1.2rem);
         margin-bottom: 15px;
     }
