Alert popup - imcrease font size and cross size.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -70,6 +70,10 @@ a:hover {
     fill: $brand-primary-1;
 }
 
+.fill-black path {
+    fill: $brand-tertiary-1;
+}
+
 .stroke-turq path {
     stroke: $brand-primary-1;
 }
