--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -974,3 +974,99 @@ h6 {
 .rating > input:checked ~ label:hover,
 .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
 .rating > input:checked ~ label:hover ~ label { color: $brand-secondary-5;  }
+
+
+// Hospital type tag
+.hospital-type {
+    top: 0;
+    left: 0;
+    bottom: auto;
+    width: auto;
+
+    p {
+        height: 30px;
+        line-height: 30px;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        z-index: 5;
+        left: 100%;
+        top: 0;
+        width: 30px;
+        height: 30px;
+    }
+
+    &.nhs-hospital:after {
+        border-bottom: solid 15px transparent;
+        border-right: solid 15px transparent;
+        border-left: solid 15px $nhsBlue;
+        border-top: solid 15px $nhsBlue;
+    }
+
+    &.private-hospital:after {
+        border-bottom: solid 15px transparent;
+        border-right: solid 15px transparent;
+        border-left: solid 15px $privateBlue;
+        border-top: solid 15px $privateBlue;
+    }
+}
+
+
+.nhs-hospital,
+.private-hospital {
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+
+    p {
+        width: 100%;
+        position: relative;
+        color: #ffffff;
+        height: 30px;
+        line-height: 30px;
+        font-size: 0.75rem !important;
+        text-transform: uppercase;
+        padding: 0 0.5rem;
+
+        &:after {
+            content: "";
+            position: absolute;
+            z-index: 5;
+            left: 100%;
+            top: 0;
+            width: 30px;
+            height: 30px;
+        }
+    }
+}
+
+.results-page-desktop .nhs-hospital,
+.results-page-desktop .private-hospital,
+.test-page .nhs-hospital,
+.test-page .private-hospital {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    border-top-left-radius: 5px;
+    padding: 0 !important;
+}
+
+.results-page-desktop .nhs-hospital p:after {
+    border-bottom: solid 15px transparent;
+    border-right: solid 15px transparent;
+    border-left: solid 15px $nhsBlue;
+    border-top: solid 15px $nhsBlue;
+    content: ''
+}
+
+.results-page-desktop .private-hospital p:after {
+    border-bottom: solid 15px transparent;
+    border-right: solid 15px transparent;
+    border-left: solid 15px $privateBlue;
+    border-top: solid 15px $privateBlue;
+    content: ''
+}
