Finished with CTA buttons on mobile.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -507,6 +507,7 @@
 .btn-enquire_mobile {
     background-color: $brand-secondary-3;
     display: flex;
+    justify-content: center;
     align-items: center;
 
     svg {
@@ -515,6 +516,7 @@
         height: 20px;
 
         @extend .mr-1;
+
     }
 }
 
