Hide stats when opening 'more info'

--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -214,3 +214,15 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+// Class added to result item when CC area open
+.result-item-mobile-section-2 {
+    transition: $transition;
+}
+
+.corporate-content-open {
+    .result-item-mobile-section-2 {
+        max-height: 0;
+        overflow: hidden;
+    }
+}
