--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -7,6 +7,10 @@
         align-items: center;
     }
 
+    .row-categories {
+        @include reset-row-spacing(4px);
+    }
+
     .filters {
         .text {
             margin: auto 0;
