--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1083,6 +1083,6 @@ h6 {
     content: ''
 }
 
-.collapse {
-    display: block !important;
-}
+//.collapse {
+//    display: block !important;
+//}
