--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -214,6 +214,7 @@ ul.blue-dot {
         position: relative;
         padding: 0 0 0 30px;
         text-align: left;
+        @extend .p-secondary;
 
         &:before {
             content: '';
