Update to modalbutton.blade.php - conditionals

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -494,9 +494,9 @@ select.big {
 
 
 // Cookie popup styling
-.cc-grower {
-    max-height: 100% !important;
-}
+//.cc-grower {
+//    max-height: 100% !important;
+//}
 
 .cc-theme-hc-cookie {
     @extend .SofiaPro-Regular;
