Terms of Use up to 'Third party generated...'

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1084,6 +1084,6 @@ h6 {
     content: ''
 }
 
-//.collapse {
-//    display: block !important;
-//}
+.collapse {
+    display: block !important;
+}
