About us CSS amends

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -474,7 +474,7 @@
     }
 
     .sort-item-location {
-        color: #040202;
+        color: $brand-tertiary-1;
         font-size: 14px;
         font-weight: 400;
         line-height: 1.3;
