--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -542,7 +542,7 @@ select.big {
         @extend .btn-brand-primary-1;
         @extend .btn-squared;
         @extend .btn-squared_slim;
-        @extend .px-5;
+        //@extend .px-5;
         @include font-size(14px, true);
         text-align: center !important;
         display: inline-block;
@@ -709,6 +709,10 @@ path {
     margin-bottom: 30px !important;
 }
 
+.mb-35 {
+    margin-bottom: 30px !important;
+}
+
 .mb-60 {
     margin-bottom: 60px !important;
 }
@@ -782,7 +786,7 @@ h2 {
 
 .section-title {
     @include font-size(1.8rem);
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     font-weight: 500;
 }
 
